# Isla-Robotics-Project

./: IMG_7413.HEIC  LICENSE  Micro_bot.py  Motor_test.py  README.md  isla.py  mcp23008.py  mcp3002.py  mini_bot.py  motors.py  pid.py  runtime.py  sensors.py  utilities.py
ISLA C Variant/: CMakeLists.txt  ISLA.code-workspace  MCP23008.c  MCP23008.h  isla.c  ssd1306.h
