cmake_minimum_required(VERSION 3.13)

include(pico_sdk_import.cmake)

project(isla C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

pico_sdk_init()
add_executable(isla isla.c)

pico_enable_stdio_usb(isla 1)
pico_enable_stdio_uart(isla 0)

pico_add_extra_outputs(isla)

target_link_libraries(isla pico_stdlib hardware_pwm hardware_timer hardware_gpio hardware_i2c)